--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
                                 Manage
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item text-dark" href="#">Leave Type</a>
-                                <a class="dropdown-item text-dark" href="#">Leave Type</a>
+                                <a class="dropdown-item text-dark" asp-controller="LeaveTypes" asp-action="Index">Leave Type</a>
+                                <a class="dropdown-item text-dark" href="#">Leave Application</a>
                                 <a class="dropdown-item text-dark" href="#">Something else here</a>
                             </div>
                         </div>
