--- a/Views/LeaveTypes/Index.cshtml
+++ b/Views/LeaveTypes/Index.cshtml
@@ -1,8 +1,58 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IEnumerable<LeaveManagement.Models.LeaveTypeVM>
+
+@{
+    ViewData["Title"] = "Index";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome Prashanth Leave Types</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<h1>Index</h1>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">
+        <i class="bi bi-plus-lg"></i>
+        Create New
+    </a>
+</p>
+<table id="lt-data" class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateCreated)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateCreated)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">
+                    <i class="bi bi-pencil"></i>
+                    Edit
+                </a> |
+                <a asp-action="Details" asp-route-id="@item.Id">
+                    <i class="bi bi-border-all"></i>
+                Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure, You want to delete this record?')" >
+                    <i class="bi bi-trash"></i>
+                Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
+@section scripts {
+<script>
+    $(document).ready(function () {
+        $('#lt-data').DataTable();
+    });
+</script>
+}
